Implemented delete/put user routes
